@@ -9,6 +9,12 @@ Bug Fixes
   return the empty list.  This was incorrect, it should have unconditionally
   returned ``[Everyone]``, and now does.
 
+- Request instances generated by ``pyramid.scripting.prepare()``,
+  ``pyramid.scripting.get_root()`` and ``pyramid.paster.bootstrap()``
+  will now get request properties which were configured via
+  ``pyramid.config.Configurator.set_request_property()``.  Note that
+  if an explicit request instance is passed in, the custom properties
+  *will not* be added.
 
 Features
 --------
